compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/PrivateInTrait.fir.java
public abstract interface PrivateInTrait /* PrivateInTrait*/ {
  private abstract @org.jetbrains.annotations.NotNull() java.lang.String getNn();//  getNn()

  private abstract @org.jetbrains.annotations.Nullable() java.lang.String getN();//  getN()

  private abstract void setNn(@org.jetbrains.annotations.NotNull() java.lang.String);//  setNn(@org.jetbrains.annotations.NotNull() java.lang.String)

  public static final class DefaultImpls /* PrivateInTrait.DefaultImpls*/ {
    private static final @org.jetbrains.annotations.NotNull() java.lang.String getNn(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() PrivateInTrait);//  getNn(@org.jetbrains.annotations.NotNull() PrivateInTrait)

    private static final @org.jetbrains.annotations.Nullable() java.lang.String getN(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() PrivateInTrait);//  getN(@org.jetbrains.annotations.NotNull() PrivateInTrait)

    private static final void setNn(@org.jetbrains.annotations.NotNull() @org.jetbrains.annotations.NotNull() PrivateInTrait, @org.jetbrains.annotations.NotNull() java.lang.String);//  setNn(@org.jetbrains.annotations.NotNull() PrivateInTrait, @org.jetbrains.annotations.NotNull() java.lang.String)
  }
}
